--- a/build_rag.ipynb
+++ b/build_rag.ipynb
@@ -473,8 +473,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-14T09:53:55.418062Z",
-     "start_time": "2024-08-14T09:53:55.415479Z"
+     "end_time": "2024-08-19T21:49:16.939322Z",
+     "start_time": "2024-08-19T21:49:16.934653Z"
     }
    },
    "cell_type": "code",
@@ -484,13 +484,13 @@
    ],
    "id": "c359fa633fd4113a",
    "outputs": [],
-   "execution_count": 12
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-14T09:56:05.524091Z",
-     "start_time": "2024-08-14T09:56:05.517686Z"
+     "end_time": "2024-08-19T21:49:18.318282Z",
+     "start_time": "2024-08-19T21:49:16.939322Z"
     }
    },
    "cell_type": "code",
@@ -500,6 +500,7 @@
     "from langchain.schema.document import Document\n",
     "from langchain_chroma import Chroma\n",
     "from get_embedding_func import get_embedding_function\n",
+    "import shutil\n",
     "\n",
     "def load_documents():\n",
     "    loader = PyPDFDirectoryLoader(DATA_PATH)\n",
@@ -556,17 +557,22 @@
     "        last_page_id = current_page_id\n",
     "        \n",
     "        chunk.metadata[\"id\"] = chunk_id\n",
-    "    return chunks"
+    "    return chunks\n",
+    "\n",
+    "\n",
+    "\n",
+    "def clear_database():\n",
+    "    shutil.rmtree(CHROMA_PATH)"
    ],
    "id": "392268839c1e5ae9",
    "outputs": [],
-   "execution_count": 14
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-14T10:25:03.927901Z",
-     "start_time": "2024-08-14T10:24:22.291569Z"
+     "end_time": "2024-08-18T23:23:53.147040Z",
+     "start_time": "2024-08-18T23:22:38.780654Z"
     }
    },
    "cell_type": "code",
@@ -582,58 +588,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Existing items: 14\n"
+      "Existing items: 0\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'Chroma' object has no attribute 'persist'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[7], line 4\u001B[0m\n\u001B[0;32m      2\u001B[0m documents \u001B[38;5;241m=\u001B[39m load_documents()\n\u001B[0;32m      3\u001B[0m chunks \u001B[38;5;241m=\u001B[39m split_documents(documents)\n\u001B[1;32m----> 4\u001B[0m \u001B[43madd_to_chroma\u001B[49m\u001B[43m(\u001B[49m\u001B[43mchunks\u001B[49m\u001B[43m)\u001B[49m\n",
+      "Cell \u001B[1;32mIn[5], line 40\u001B[0m, in \u001B[0;36madd_to_chroma\u001B[1;34m(chunks)\u001B[0m\n\u001B[0;32m     38\u001B[0m     new_chunk_ids\u001B[38;5;241m=\u001B[39m [chunk\u001B[38;5;241m.\u001B[39mmetadata[\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mid\u001B[39m\u001B[38;5;124m\"\u001B[39m] \u001B[38;5;28;01mfor\u001B[39;00m chunk \u001B[38;5;129;01min\u001B[39;00m new_chunks]\n\u001B[0;32m     39\u001B[0m     db\u001B[38;5;241m.\u001B[39madd_documents(new_chunks, ids\u001B[38;5;241m=\u001B[39mnew_chunk_ids)\n\u001B[1;32m---> 40\u001B[0m     \u001B[43mdb\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mpersist\u001B[49m()\n\u001B[0;32m     41\u001B[0m \u001B[38;5;28;01melse\u001B[39;00m:\n\u001B[0;32m     42\u001B[0m     \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mNo new chunks to add\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n",
+      "\u001B[1;31mAttributeError\u001B[0m: 'Chroma' object has no attribute 'persist'"
      ]
     }
    ],
-   "execution_count": 18
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-14T10:27:21.430150Z",
-     "start_time": "2024-08-14T10:27:21.426879Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "import shutil\n",
-    "def clear_database():\n",
-    "    shutil.rmtree(CHROMA_PATH)"
-   ],
-   "id": "de73473ff0633bc3",
-   "outputs": [],
-   "execution_count": 19
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-08-14T10:27:29.180590Z",
-     "start_time": "2024-08-14T10:27:29.109012Z"
+     "end_time": "2024-08-18T23:22:08.874132Z",
+     "start_time": "2024-08-18T23:22:08.868904Z"
     }
    },
    "cell_type": "code",
    "source": "clear_database()",
    "id": "6836ab9bf5b3790a",
-   "outputs": [
-    {
-     "ename": "PermissionError",
-     "evalue": "[WinError 32] The process cannot access the file because it is being used by another process: 'chroma\\\\01e8efe3-5d97-4971-9566-22e5ca64f15e\\\\data_level0.bin'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mPermissionError\u001B[0m                           Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[20], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m \u001B[43mclear_database\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\n",
-      "Cell \u001B[1;32mIn[19], line 3\u001B[0m, in \u001B[0;36mclear_database\u001B[1;34m()\u001B[0m\n\u001B[0;32m      2\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mclear_database\u001B[39m():\n\u001B[1;32m----> 3\u001B[0m     \u001B[43mshutil\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mrmtree\u001B[49m\u001B[43m(\u001B[49m\u001B[43mCHROMA_PATH\u001B[49m\u001B[43m)\u001B[49m\n",
-      "File \u001B[1;32m~\\anaconda3\\envs\\rag\\Lib\\shutil.py:787\u001B[0m, in \u001B[0;36mrmtree\u001B[1;34m(path, ignore_errors, onerror, dir_fd)\u001B[0m\n\u001B[0;32m    785\u001B[0m     \u001B[38;5;66;03m# can't continue even if onerror hook returns\u001B[39;00m\n\u001B[0;32m    786\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m\n\u001B[1;32m--> 787\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[43m_rmtree_unsafe\u001B[49m\u001B[43m(\u001B[49m\u001B[43mpath\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43monerror\u001B[49m\u001B[43m)\u001B[49m\n",
-      "File \u001B[1;32m~\\anaconda3\\envs\\rag\\Lib\\shutil.py:629\u001B[0m, in \u001B[0;36m_rmtree_unsafe\u001B[1;34m(path, onerror)\u001B[0m\n\u001B[0;32m    627\u001B[0m         onerror(os\u001B[38;5;241m.\u001B[39mpath\u001B[38;5;241m.\u001B[39mislink, fullname, sys\u001B[38;5;241m.\u001B[39mexc_info())\n\u001B[0;32m    628\u001B[0m         \u001B[38;5;28;01mcontinue\u001B[39;00m\n\u001B[1;32m--> 629\u001B[0m     \u001B[43m_rmtree_unsafe\u001B[49m\u001B[43m(\u001B[49m\u001B[43mfullname\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43monerror\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m    630\u001B[0m \u001B[38;5;28;01melse\u001B[39;00m:\n\u001B[0;32m    631\u001B[0m     \u001B[38;5;28;01mtry\u001B[39;00m:\n",
-      "File \u001B[1;32m~\\anaconda3\\envs\\rag\\Lib\\shutil.py:634\u001B[0m, in \u001B[0;36m_rmtree_unsafe\u001B[1;34m(path, onerror)\u001B[0m\n\u001B[0;32m    632\u001B[0m             os\u001B[38;5;241m.\u001B[39munlink(fullname)\n\u001B[0;32m    633\u001B[0m         \u001B[38;5;28;01mexcept\u001B[39;00m \u001B[38;5;167;01mOSError\u001B[39;00m:\n\u001B[1;32m--> 634\u001B[0m             \u001B[43monerror\u001B[49m\u001B[43m(\u001B[49m\u001B[43mos\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43munlink\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mfullname\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43msys\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mexc_info\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m    635\u001B[0m \u001B[38;5;28;01mtry\u001B[39;00m:\n\u001B[0;32m    636\u001B[0m     os\u001B[38;5;241m.\u001B[39mrmdir(path)\n",
-      "File \u001B[1;32m~\\anaconda3\\envs\\rag\\Lib\\shutil.py:632\u001B[0m, in \u001B[0;36m_rmtree_unsafe\u001B[1;34m(path, onerror)\u001B[0m\n\u001B[0;32m    630\u001B[0m \u001B[38;5;28;01melse\u001B[39;00m:\n\u001B[0;32m    631\u001B[0m     \u001B[38;5;28;01mtry\u001B[39;00m:\n\u001B[1;32m--> 632\u001B[0m         \u001B[43mos\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43munlink\u001B[49m\u001B[43m(\u001B[49m\u001B[43mfullname\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m    633\u001B[0m     \u001B[38;5;28;01mexcept\u001B[39;00m \u001B[38;5;167;01mOSError\u001B[39;00m:\n\u001B[0;32m    634\u001B[0m         onerror(os\u001B[38;5;241m.\u001B[39munlink, fullname, sys\u001B[38;5;241m.\u001B[39mexc_info())\n",
-      "\u001B[1;31mPermissionError\u001B[0m: [WinError 32] The process cannot access the file because it is being used by another process: 'chroma\\\\01e8efe3-5d97-4971-9566-22e5ca64f15e\\\\data_level0.bin'"
-     ]
-    }
-   ],
-   "execution_count": 20
+   "outputs": [],
+   "execution_count": 6
   },
   {
    "metadata": {},
